--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-matplotlib==3.5.3
-networkx==2.8.6
-numpy==1.23.2
-pretty_midi==0.2.9
+matplotlib==3.9.4
+networkx==3.4.2
+numpy==1.26.4
+pretty_midi==0.2.10
+eel==0.18.1
