--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,16 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "tuttut"
-version = "0.0.6"
+name = "tuttut-dt"
+version = "0.1.0"
 authors = [
   { name="Nathan Candre", email="nathan.candre@gmail.com" },
+  { name="beruzebabu" }
 ]
-description = "A package to convert MIDI files to string instrument tabs."
+maintainers = [
+    { name="beruzebabu" },
+]
+description = "A package to convert MIDI files to string instrument tabs (with diatonic instrument support)."
 readme = "README.md"
 requires-python = ">=3.10"
 classifiers = [
@@ -20,13 +24,12 @@ dependencies = [
     "matplotlib==3.9.4",
     "networkx==3.4.2",
     "numpy==1.26.4",
-    "pretty_midi==0.2.10",
-    "eel==0.18.1"
+    "pretty_midi==0.2.10"
 ]
 
 [project.urls]
-Homepage = "https://github.com/natecdr/tuttut"
-Issues = "https://github.com/natecdr/tuttut/issues"
+Homepage = "https://github.com/beruzebabu/tuttut-dt"
+Issues = "https://github.com/beruzebabu/tuttut-dt/issues"
 
-[project.gui-scripts]
-tuttut = "tuttut.midi_tabs_gui:run"
+# [project.gui-scripts]
+# tuttut = "tuttut.midi_tabs_gui:run"
